<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_detail">

    <fragment
        android:id="@+id/navigation_detail"
        android:name="fr.utt.if26.myaccount.DetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="fr.utt.if26.myaccount.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="fr.utt.if26.myaccount.ui.chart.ChartFragment"
        android:label="@string/charts"
        tools:layout="@layout/fragment_chart" />
</navigation>